[gd_scene load_steps=36 format=3 uid="uid://ckbkydy31g76v"]

[ext_resource type="Script" uid="uid://dvwvdmwjhgj00" path="res://scenes/characters/Enemies/Piranna Plant/piranna_plant_pipe.gd" id="1_pdr2u"]
[ext_resource type="Texture2D" uid="uid://8gnw86g1udyf" path="res://scenes/characters/Enemies/Piranna Plant/tallo.png" id="2_eidm5"]
[ext_resource type="Shader" uid="uid://clf3pi36o2qof" path="res://assets/shaders/piranna_plant_pipe.gdshader" id="3_f7gb6"]
[ext_resource type="Texture2D" uid="uid://sleajj6ehvu7" path="res://scenes/characters/Enemies/Piranna Plant/head-sheet.png" id="3_jodt1"]
[ext_resource type="Script" uid="uid://c26gyx3n3aw6n" path="res://State/State_Machine.gd" id="4_jodt1"]
[ext_resource type="Script" uid="uid://b4bqvoc54vi0e" path="res://scenes/characters/Enemies/Piranna Plant/state/piranna_plant_inside.gd" id="5_sr45w"]
[ext_resource type="Script" uid="uid://yh8c8ktrvhvq" path="res://scenes/characters/Enemies/Piranna Plant/state/piranna_plant_trans_out.gd" id="6_gj0j6"]
[ext_resource type="Script" uid="uid://bha8vxthigqev" path="res://scenes/characters/Enemies/Piranna Plant/state/piranna_plant_outside.gd" id="7_f7gb6"]
[ext_resource type="Script" uid="uid://xu6okqi0ojud" path="res://scenes/characters/Enemies/Piranna Plant/state/piranna_plant_trans_in.gd" id="8_aywwj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sr45w"]
size = Vector2(64, 28.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rob0j"]
size = Vector2(50, 368.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gj0j6"]
size = Vector2(10.6667, 31.3333)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr45w"]
atlas = ExtResource("2_eidm5")
region = Rect2(0, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rob0j"]
atlas = ExtResource("2_eidm5")
region = Rect2(7, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj0j6"]
atlas = ExtResource("2_eidm5")
region = Rect2(14, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7gb6"]
atlas = ExtResource("2_eidm5")
region = Rect2(21, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_aywwj"]
atlas = ExtResource("2_eidm5")
region = Rect2(28, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfgke"]
atlas = ExtResource("2_eidm5")
region = Rect2(35, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi0v8"]
atlas = ExtResource("2_eidm5")
region = Rect2(42, 0, 7, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2hu3"]
atlas = ExtResource("2_eidm5")
region = Rect2(49, 0, 7, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_aywwj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr45w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rob0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj0j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7gb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aywwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfgke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi0v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2hu3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aywwj"]
shader = ExtResource("3_f7gb6")
shader_parameter/OLDCOLOR1 = Color(0.631373, 0.0627451, 0.0627451, 1)
shader_parameter/OLDCOLOR2 = Color(0.772549, 0.184314, 0.176471, 1)
shader_parameter/OLDCOLOR3 = Color(0.843137, 0.137255, 0.137255, 1)
shader_parameter/OLDCOLOR4 = Color(1, 0.317647, 0.317647, 1)
shader_parameter/OLDCOLOR5 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR1 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR2 = Color(0.390871, 0.0606965, 0.438902, 1)
shader_parameter/NEWCOLOR3 = Color(0.095357, 0, 0.866588, 1)
shader_parameter/NEWCOLOR4 = Color(1, 0, 0.0229139, 1)
shader_parameter/NEWCOLOR5 = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdtjj"]
atlas = ExtResource("3_jodt1")
region = Rect2(0, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ammsj"]
atlas = ExtResource("3_jodt1")
region = Rect2(24, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpbjv"]
atlas = ExtResource("3_jodt1")
region = Rect2(48, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky84n"]
atlas = ExtResource("3_jodt1")
region = Rect2(72, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dl4j"]
atlas = ExtResource("3_jodt1")
region = Rect2(96, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tb75"]
atlas = ExtResource("3_jodt1")
region = Rect2(120, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4dcm"]
atlas = ExtResource("3_jodt1")
region = Rect2(144, 0, 24, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_a22sk"]
atlas = ExtResource("3_jodt1")
region = Rect2(168, 0, 24, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_wi0v8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdtjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ammsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpbjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky84n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dl4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tb75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4dcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a22sk")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_jodt1"]
resource_name = "Plant movement"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cabeza:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2),
"update": 1,
"values": [&"default", &"default", &"default", &"default", &"default", &"default", &"default", &"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cabeza:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cabeza:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(2, 0.5), Vector2(1, 0.5), Vector2(0, 1), Vector2(-1, 1), Vector2(-1, 1), Vector2(0, 1), Vector2(1, 0.5), Vector2(2, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tallo:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tallo:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2),
"update": 1,
"values": [&"default", &"default", &"default", &"default", &"default", &"default", &"default", &"default"]
}

[sub_resource type="Animation" id="Animation_sr45w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cabeza:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cabeza:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cabeza:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0.485)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tallo:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tallo:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tallo:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 20)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 13.3333)]
}

[sub_resource type="Animation" id="Animation_sfgke"]
resource_name = "going out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tallo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cabeza:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 13.3333)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rob0j"]
_data = {
&"Plant movement": SubResource("Animation_jodt1"),
&"RESET": SubResource("Animation_sr45w"),
&"going out": SubResource("Animation_sfgke")
}

[node name="PirannaPlantPipe" type="Area2D" groups=["Piranna", "piranna"]]
z_index = -100
position = Vector2(0, -33)
scale = Vector2(3, 3)
collision_layer = 3
collision_mask = 7
script = ExtResource("1_pdr2u")

[node name="area" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area"]
polygon = PackedVector2Array(-168, -138.333, -85.3333, -138.333, 82.6667, -138.333, 170.667, -138.333, 170.667, 139, 32, 29.6667, -32, 29.6667, -86.5198, 73.4964, -168, 139)

[node name="Inner" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inner"]
position = Vector2(9.53674e-07, 14.6667)
shape = SubResource("RectangleShape2D_sr45w")
debug_color = Color(0.670588, 0.32549, 0.827451, 0.462745)

[node name="Left" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-58, 11)
shape = SubResource("RectangleShape2D_rob0j")
debug_color = Color(0.832644, 0.241093, 0.278082, 0.42)

[node name="Right" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(57.6667, 11)
shape = SubResource("RectangleShape2D_rob0j")
debug_color = Color(0.22217, 0.423177, 0.785124, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 13.3333)
shape = SubResource("RectangleShape2D_gj0j6")
debug_color = Color(0, 0.588253, 0.0043113, 0.42)

[node name="Tallo" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 20)
sprite_frames = SubResource("SpriteFrames_aywwj")
frame = 4

[node name="Cabeza" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_aywwj")
position = Vector2(0, 0.485)
sprite_frames = SubResource("SpriteFrames_wi0v8")
frame = 7
flip_h = true
flip_v = true

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_jodt1")
initial_state = NodePath("PirannaPlantTransOut")

[node name="PirannaPlantInside" type="Node" parent="State Machine"]
script = ExtResource("5_sr45w")

[node name="Timer2" type="Timer" parent="State Machine/PirannaPlantInside"]

[node name="PirannaPlantTransOut" type="Node" parent="State Machine"]
script = ExtResource("6_gj0j6")

[node name="PirannaPlantOutside" type="Node" parent="State Machine"]
script = ExtResource("7_f7gb6")

[node name="Timer" type="Timer" parent="State Machine/PirannaPlantOutside"]

[node name="ShootTimer" type="Timer" parent="State Machine/PirannaPlantOutside"]

[node name="PirannaPlantTransIn" type="Node" parent="State Machine"]
script = ExtResource("8_aywwj")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -21)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rob0j")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
[connection signal="area_entered" from="Inner" to="." method="_on_inner_area_entered"]
[connection signal="area_exited" from="Inner" to="." method="_on_inner_area_exited"]
[connection signal="timeout" from="State Machine/PirannaPlantInside/Timer2" to="State Machine/PirannaPlantInside" method="_on_timer_timeout"]
[connection signal="timeout" from="State Machine/PirannaPlantOutside/Timer" to="State Machine/PirannaPlantOutside" method="_on_timer_timeout"]
[connection signal="timeout" from="State Machine/PirannaPlantOutside/ShootTimer" to="State Machine/PirannaPlantOutside" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
